aula 08/09 pré-intervalo

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-    <button onclick="hello()">Clique em mim!!!!</button>
+    <button onclick="hello(event)">Clique em mim!!!!</button>
+
+    <p onclick="hello(event)">Pietro</p>
+
+    <input type="text">
 
     <script src="./script.js"></script>
 </body>
