--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
 </head>
 <body>
 
@@ -15,5 +14,16 @@
     <input type="text">
 
     <script src="./script.js"></script>
+    <!-- <script>
+        const somar = (a, b) => a + b;
+        const subtrair = (a, b) => a - b;
+        const multiplicar = (a, b) => a * b;
+        const dividir = (a, b) => a / b;
+
+        console.log(somar(2, 2));
+        console.log(subtrair(5, 2));
+        console.log(multiplicar(3, 2));
+        console.log(dividir(6, 2));
+    </script> -->
 </body>
 </html>
